# csound-wasm

./: .gitmodules  CMakeLists.txt  README.md  build-prerequisites-wasm.sh  build-wasm.sh  build_libsndfile_wasm.sh  clean-build-wasm.sh  copyright.txt  deploy.py  download_and_build_libsndfile_wasm.sh  download_libsndfile_wasm.sh  fresh-build-wasm.sh  package-lock.json  package.json  release-wasm.sh  update-assets.sh  update-dependency-submodules.sh  update-emscripten-wasm.sh
.github/workflows/: build-and-release.yml
Android/CsoundAndroid/jni/: version.h
CsoundAC/: CMakeLists.txt  csoundac_embind.cpp
cmake/Modules/: FindSndFile.cmake
cmask/: CMakeLists.txt
src/: CsoundAudioNode.js  CsoundAudioProcessor_postjs.js  CsoundAudioProcessor_prejs.js  csound_embind.cpp  csound_embind.hpp  trichord_space.html
tools/: sync-csound-wasm.mjs
web/: CsoundAC.js  CsoundAudioNode.js  trichord_space.html
